prepare to switch branch

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                     </a>
                 </li>
 
-<!--                <li role="presentation" data-page="map" class="">-->
-<!--                    <a href="#section3">-->
-<!--                        <span class="nav__counter">Сделки на карте</span>-->
-<!--                        <p class="nav__body"><b>Выберите необходимый инструмент</b>. </p>-->
-<!--                    </a>-->
-<!--                </li>-->
+                <li role="presentation" data-page="map" class="">
+                    <a href="#section3">
+                        <span class="nav__counter">Сделки на карте</span>
+                        <p class="nav__body"><b>Выберите необходимый инструмент</b>. </p>
+                    </a>
+                </li>
 <!--                <li role="presentation" data-page="hi" class="">-->
 <!--                    <a href="#section4">-->
 <!--                        <span class="nav__counter">Привет</span>-->
@@ -88,23 +88,23 @@
         </section>
 
         <section class="section section3" id="section3">
-<!--            <div class="container">-->
-<!--                <h1>Суворов</h1>-->
-<!--                -->
-<!--            </div>-->
+            <div class="container">
+                <h1>Суворов</h1>
+
+            </div>
         </section>
 
         <section class="section section4" id="section4">
             <div class="container">
                 <h1>Привет</h1>
-                <div class="circ">
-                    <div class="load">Подождите . . .</div>
-                    <div class="hands"></div>
-                    <div class="body"></div>
-                    <div class="head">
-                        <div class="eye"></div>
-                    </div>
-                </div>
+<!--                <div class="circ">-->
+<!--                    <div class="load">Подождите . . .</div>-->
+<!--                    <div class="hands"></div>-->
+<!--                    <div class="body"></div>-->
+<!--                    <div class="head">-->
+<!--                        <div class="eye"></div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </section>
     </div>
