adding wialon library to the project

--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
         <section class="section section3" id="section3">
             <div class="container">
                 <h1>Суворов</h1>
-
+                Token: <input type="text" id="token"/>
+                <input type="button" value="login" id="login_btn" />
+                <input type="button" value="logout" id="logout_btn" />
+                <input type="button" value="get user" id="user_btn" />
+                <div id="log"></div>
             </div>
         </section>
 
